input element with password type

--- a/version_01/index.html
+++ b/version_01/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="input-box">
-    
+    <input type="password" placeholder="Password">
   </div>
   <script src="index.js"></script>
 </body>
