--- a/version_01/index.html
+++ b/version_01/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="input-box">
     <input type="password" placeholder="Password">
+    <img src="eye-icons/eye-close.png" alt="password toggle icon">
   </div>
   <script src="index.js"></script>
 </body>
