--- a/version_01/index.html
+++ b/version_01/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="input-box">
-    <input type="password" placeholder="Password">
-    <img src="eye-icons/eye-close.png" alt="password toggle icon">
+    <input type="password" placeholder="Password" id="password">
+    <img src="eye-icons/eye-close.png" alt="password toggle icon" id="eyeicon">
   </div>
   <script src="index.js"></script>
 </body>
